// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modifyPoznamka [not authenticated] 1`] = `
Object {
  "code": "authentication token invalid",
  "status": "Špatný ověřovací token. Zkus se přihlásit znovu. Detaily: JsonWebTokenError: jwt must be provided",
}
`;

exports[`modifyPoznamka - index ok 1`] = `
Object {
  "code": "ok",
  "response": Object {
    "poznamky": Array [
      Object {
        "datum": "2018-06-08T00:00:00.000Z",
        "text": "možná se odhlásí",
      },
      Object {
        "datum": "2018-06-12T18:42:12.234Z",
        "text": "změněná poznámka",
      },
    ],
  },
  "status": "uloženo v pořádku",
}
`;

exports[`modifyPoznamka - index ok 2`] = `
Array [
  Object {
    "__v": 1,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "poznamky": Array [
          Object {
            "datum": 2018-06-08T00:00:00.000Z,
            "text": "možná se odhlásí",
          },
          Object {
            "datum": 2018-06-12T18:42:12.234Z,
            "text": "změněná poznámka",
          },
        ],
        "rok": 2018,
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`modifyPoznamka - špatný index 1`] = `
Object {
  "code": "neexistuje",
  "status": "Poznámka číslo 2 (+1) neexistuje.",
}
`;

exports[`modifyPoznamka - špatný index 2`] = `
Array [
  Object {
    "__v": 0,
    "ucasti": Array [
      Object {
        "platby": Array [],
        "poznamky": Array [
          Object {
            "datum": 2018-02-07T00:00:00.000Z,
            "text": "první přihlášený",
          },
          Object {
            "datum": 2018-06-08T00:00:00.000Z,
            "text": "možná se odhlásí",
          },
        ],
        "rok": 2018,
        "udaje": Object {
          "jmeno": "František",
          "narozeni": Object {
            "rok": 1953,
          },
          "obec": "Ostrava 1",
          "pohlavi": "muž",
          "prijmeni": "Balabák",
          "stat": "Česká republika",
        },
      },
    ],
  },
]
`;

exports[`účastník neexistuje 1`] = `
Object {
  "code": "neexistuje",
  "status": "Účastník s id 41224d776a326fb40f000001 neexistuje.",
}
`;
